samples/_failures_safe/1761070583_2c7cae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1dd4b00.c: In function ‘tokenize’:
./samples/SAFE/__tmp_f1dd4b00.c:171:5: error: expected declaration or statement at end of input
  171 |     }
      |     ^
